Bugfix - make tooltip always visible only in tests, not on real pages
Ooops. https://skia-review.git.corp.google.com/c/buildbot/+/1163536
caused this: https://screenshot.googleplex.com/A7v9ZLRTBDvJrUG.

Revert the prod change and add moveTo instead, with non-zero arguments
this call changes visibility to visible.

Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/1163097
Auto-Submit: Anri Sidorov <ansid@google.com>
Commit-Queue: Farid (Mojtaba) Faridzad <faridzad@google.com>

--- a/perf/modules/chart-tooltip-sk/chart-tooltip-sk.scss
+++ b/perf/modules/chart-tooltip-sk/chart-tooltip-sk.scss
@@ -5,6 +5,7 @@ chart-tooltip-sk {
   margin: 10px;
 
   > div.container {
+    display: none;
     opacity: 90%;
     font-size: 12px;
     font-family: var(--font-family);
